--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,23 @@
-
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven { url "http://localhost:8081/content/repositories/snapshots/" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -28,9 +32,16 @@ android {
 
 repositories {
     mavenCentral()
+    jcenter()
+    google()
+    maven { url "http://localhost:8081/content/repositories/snapshots/" }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    api 'com.facebook.react:react-native:+'
+    api 'im.actor:android-react-sdk:3.0.115-SNAPSHOT'
 }
   
