--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,6 @@ repositories {
 
 dependencies {
     api 'com.facebook.react:react-native:+'
-    api 'im.actor:android-react-sdk:3.0.115-SNAPSHOT'
+   // api 'im.actor:android-react-sdk:3.0.115-SNAPSHOT'
 }
   
